# MadCompiler

./: .clang-format  CMakeLists.txt  LICENSE  README.md  output.txt  test.py
docs/: case.txt  demand.md  grammar.txt  input.txt  input1.txt  input2.txt  input3.txt  test_1.txt  test_10.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_9.txt  test_solution.md
include/: CodeGenerator.hpp  SemanticAnalyzer.hpp  ast.hpp  code-gen.hpp  lexer.hpp  parser.hpp  semantic-analyzes.hpp  symbol_table.hpp  token.hpp
src/: CMakeLists.txt  CodeGenerator.cpp  SemanticAnalyzer.cpp  ast.cpp  compiler.cpp  lexer.cpp  lexeraa.cpp  madcompiler.cpp  main.cpp  parser.cpp  symbol_table.cpp  token.cpp
test_cases/: test_case1.txt  test_case10.txt  test_case11.txt  test_case12.txt  test_case13.txt  test_case2.txt  test_case3.txt  test_case4.txt  test_case5.txt  test_case6.txt  test_case7.txt  test_case8.txt  test_case9.txt
